--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 	      <artifactId>springdoc-openapi-ui</artifactId>
 	      <version>1.6.4</version>
 	   </dependency>
+	   
+	   <dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
