--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-data</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -57,10 +64,16 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		
-		 <dependency>
-	      <groupId>org.springdoc</groupId>
-	      <artifactId>springdoc-openapi-ui</artifactId>
-	      <version>1.6.4</version>
+		<!-- <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency> -->
+		
+		<dependency>
+	      	<groupId>org.springdoc</groupId>
+	     	<artifactId>springdoc-openapi-ui</artifactId>
+	      	<version>1.6.4</version>
 	   </dependency>
 	   
 	   <dependency>
